Migrate Vector Data bases integration to official Java client
Replaces the REST-based Pinecone integration with the official Pinecone Java client (v2.0.0), updating configuration, service logic, and auto-configuration accordingly. Updates Qdrant and Weaviate documentation to reflect migration to official SDKs. Aligns Qdrant Testcontainers image to v1.16.1 for compatibility with the official client. Improves metadata handling in Milvus and in-memory vector services. Adds gRPC BOM to dependency management for consistent gRPC versions across vector DB SDKs. Updates integration test workflow to support Pinecone API key and host configuration.